# evaluate

./: .env  .env.example  .gitignore  404.html  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  basic_tests.json  index.html  qa_f1.json  qa_sample.json  s.txt  sitemap.xml  test_judge_prompts.sh
.github/workflows/: rust.yml  test.yml
assets/js/: 0e384e19.734841fd.js  0e384e19.815b64e3.js  36b735b0.341a2656.js  393be207.b6310c14.js  6476eba6.4bfe9cd9.js  6476eba6.4f8053b1.js  6476eba6.5b5b6b0e.js  common.7a19e0b0.js  main.eab8feab.js  main.fea16e67.js  runtime~main.6ffa1a6a.js  runtime~main.72194eb0.js  runtime~main.c8297dd7.js
data/: evals.db-shm  evals.db-wal
docs/: docusaurus.config.ts
docs/docs/: intro.md  usage.md
markdown-page/: index.html
migrations/: 003_judge_prompts.sql  20240101000000_create_evaluations_table.sql  20240806120000_create_evals_table.sql  20251104162000_initial_schema.sql
src/: banner.rs  config.rs  config.toml  database.rs  errors.rs  eval1.json  lib.rs  main.rs  models.rs  runner.rs
src/api/: handlers.rs  mod.rs  routes.rs  state.rs
src/api/handlers/: evals.rs  experiments.rs  health.rs  history.rs  judge_prompts.rs  mod.rs  prompt_versions.rs  ws.rs
src/providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
static/: 20240806120000_create_evals_table.sql  index.html  results.css  results.html  script.js  style.css  styles.css  summary.html
tests/: integration_tests.rs
usage/: index.html
