[package]
name = "evaluate"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-rt = "2.9"
env_logger = "0.11.8"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.8"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
actix-files = "0.6.8"
actix-cors = "0.7.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"] }
dirs = "5.0"
dotenv = "0.15.0"
rust-embed = "8.7.2"
mime_guess = "2.0.5"
